Upgraded to Oozie 4.2.0